--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -77,7 +77,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "d3ecd195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11): \n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2b03d27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "499552c8-9e30-46e1-a706-4ac5dc64670e",
    "metadata": {},
    "outputs": [],
@@ -91,14 +129,37 @@
     "    If the random number is greater than 5, the adventurer loses the battle. In this case, print \"You lost the battle...\"\n",
     "    and return something that indicates the ghost defeated the adventurer.\n",
     "    \"\"\"\n",
-    "    print(\"You encounter a ghost!\")\n",
+    "    random_number = random.randint(1,10)\n",
+    "    \n",
+    "    if (random_number <= 5):\n",
+    "        print(\"You encounter a ghost!\")\n",
+    "    else: \n",
+    "        print(\"You lost the battle...\")\n",
     "    \n",
     "    # your code goes here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "f792ea50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You lost the battle...\n"
+     ]
+    }
+   ],
+   "source": [
+    "encounter_ghost()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "d3e4076b-48cc-41ac-95ad-891743e775f5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +191,51 @@
     "\n",
     "    \"\"\"\n",
     "     \n",
-    "    # your code goes here"
+    "     \n",
+    "     \n",
+    "     \n",
+    "     \n",
+    "     \n",
+    "    health_points = 10\n",
+    "    items = []\n",
+    "    has_key = False\n",
+    "    \n",
+    "    while True: \n",
+    "        if (health_points == 0): \n",
+    "            print(\"Game over, you lost all your health points.\")\n",
+    "            break\n",
+    "        choice = input(\"You are in a hallway. Do you want to go 'left' or 'right'? \").strip().lower()\n",
+    "\n",
+    "        if choice == 'left':\n",
+    "            print(\"You chose the left path.\")\n",
+    "            event = random.choice(['potion', 'trap'])\n",
+    "            if event == 'potion':\n",
+    "                print(\"You found a potion! It has been added to your items.\")\n",
+    "                items.append('potion')\n",
+    "            else:\n",
+    "                print(\"You fell into a trap! You lose 2 health points.\")\n",
+    "                health_points -= 2\n",
+    "            print(f\"Current health points: {health_points}\")\n",
+    "\n",
+    "        elif choice == 'right':\n",
+    "            print(\"You chose the right path.\")\n",
+    "            if encounter_ghost():\n",
+    "                print(\"You found a key! It has been added to your items.\")\n",
+    "                items.append('key')\n",
+    "                has_key = True\n",
+    "            else:\n",
+    "                print(\"You lost 2 health points in the battle.\")\n",
+    "                health_points -= 2\n",
+    "            print(f\"Current health points: {health_points}\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid choice, please choose 'left' or 'right'.\")\n",
+    "            continue\n",
+    "\n",
+    "        \n",
+    "        if has_key: \n",
+    "            print(\"You unlocked the door and found the Treasure! Congratulations!\")\n",
+    "            break"
    ]
   },
   {
@@ -143,10 +248,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f238dc90-0be2-4d8c-93e9-30a1dc8a5b72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Haunted Mansion!\n",
+      "You chose the left path.\n",
+      "You found a potion! It has been added to your items.\n",
+      "Current health points: 10\n",
+      "You chose the right path.\n",
+      "You encounter a ghost!\n",
+      "You lost 2 health points in the battle.\n",
+      "Current health points: 8\n",
+      "You chose the right path.\n",
+      "You lost the battle...\n",
+      "You lost 2 health points in the battle.\n",
+      "Current health points: 6\n",
+      "You chose the right path.\n",
+      "You lost the battle...\n",
+      "You lost 2 health points in the battle.\n",
+      "Current health points: 4\n",
+      "You chose the right path.\n",
+      "You lost the battle...\n",
+      "You lost 2 health points in the battle.\n",
+      "Current health points: 2\n",
+      "You chose the right path.\n",
+      "You lost the battle...\n",
+      "You lost 2 health points in the battle.\n",
+      "Current health points: 0\n",
+      "Game over, you lost all your health points.\n"
+     ]
+    }
+   ],
    "source": [
     "run_mansion()"
    ]
@@ -176,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
